@@ -1,5 +1,6 @@
 ncmpc 0.22 - not yet released
 * rename "playlist" to "queue"
+* remove useless "Connected to ..." message
 * require MPD 0.16
 
 
